--- a/registro_usr/index.html
+++ b/registro_usr/index.html
@@ -66,7 +66,7 @@
                     <!-- Iniciar Sesion -->
                     <div id="iniciar-sesion">
                         <h1>Iniciar Sesión</h1>
-                        <form action="../Vista_admin/index.html">
+                        <form action="../vista_cliente/index.html">
                             <div class="contenedor-input">
                                 <label>
                                     Usuario <span class="req">*</span>
@@ -80,7 +80,7 @@
                                 </label>
                                 <input type="password" required>
                             </div>
-                            <p class="forgot"><a href="#">Se te olvidó la contraseña?</a></p>
+                            <p class="forgot"><a href="../registro_adm/index.html">Eres admin?</a></p>
 
                             <input type="submit" class="button button-block" value="Iniciar Sesión">
                         </form>
@@ -89,7 +89,7 @@
                     <!-- Registrarse -->
                     <div id="registrarse">
                         <h1>Registrarse</h1>
-                        <form action="../usuario/index.html">
+                        <form action="../vista_cliente/index.html">
                             <div class="fila-arriba">
                                 <div class="contenedor-input">
                                     <label>
