--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </nav>
         <main>
-            <img src="./img/DENTHUB.png" alt="denthub" width="1349px" height="600px">
+            <img src="./img/DENTHUB.png" alt="denthub" width="100%" height="600px">
             <div class="container1">
 
                 <h1 class="title">Bienvenidos a DentHub</h1>
