--- a/vista_cliente/calendario_cliente/index.html
+++ b/vista_cliente/calendario_cliente/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/mobiscroll.javascript.min.css" rel="stylesheet" />
 <script src="js/mobiscroll.javascript.min.js"></script>
-<link rel="stylesheet" href="../style/style.css">
+<link rel="stylesheet" href="../../style/style.css">
   <script>
     // Ignore this in your implementation
     window.isMbscDemo = true;
