--- a/vista_cliente/administrar_cita/index.html
+++ b/vista_cliente/administrar_cita/index.html
@@ -2,12 +2,14 @@
 
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administración de Citas</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -35,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <div class="xd"> 
+    <div class="xd">
         <h1>Administrar Citas</h1>
     </div>
     <main>
@@ -76,20 +78,22 @@
                 </tbody>
             </table>
         </section>
+        </main>
         <div class="citabtn">
-        <a href="./agendar/index.html"><button class="cancel-btn">Agendar nueva cita</button></a>
-     </div>
+            <a href="./agendar/index.html"><button class="cancel-btn">Agendar nueva cita</button></a>
+        </div>
+        <footer class="bg_footer">
+            <div class="footer-container">
+                <ul>
+                    <li><a href="#aviso-privacidad">Aviso de privacidad</a></li>
+                    <li><a href="#terminos-y-condiciones">Términos y condiciones</a></li>
+                    <li><a href="#mapa-de-sitio">Mapa de sitio</a></li>
+                </ul>
+                <p>&copy; 2023 Dentavida. Todos los derechos reservados.</p>
+
+            </div>
+        </footer>
 
 </body>
-<footer>
-    <div class="footer-container">
-        <ul>
-            <li><a href="#aviso-privacidad">Aviso de privacidad</a></li>
-            <li><a href="#terminos-y-condiciones">Términos y condiciones</a></li>
-            <li><a href="#mapa-de-sitio">Mapa de sitio</a></li>
-        </ul>
-        <p>&copy; 2023 Dentavida. Todos los derechos reservados.</p>
-        
-    </div>
-</footer>
+
 </html>
