--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="./img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="#">Home</a></li>
@@ -103,7 +103,7 @@
             </div>
         </main>
 
-        <footer>
+        <footer class="footer">
             <div class="footer-container">
                 <ul>
                     <li><a href="#aviso-privacidad">Aviso de privacidad</a></li>
