--- a/vista_admin/pacientes/perfil_pac/index.html
+++ b/vista_admin/pacientes/perfil_pac/index.html
@@ -14,7 +14,6 @@
         rel="stylesheet">
 </head>
 
-<body>
     <header>
         <nav>
             <div class="arriba">
@@ -24,7 +23,7 @@
                 <div class="navbar_items">
                     <li><a href="../../../index.html">Home</a></li>
                     <li><a href="../../calendario_admin/index.html">Agenda</a></li>
-                    <li><a href="../../index.html">Pacientes</a></li>
+                    <li><a href="../index.html">Pacientes</a></li>
                     <li><a href="../../control_de_pagos/index.html">Control de pagos</a></li>
                     <div class="contenedor_icons">
                         <a class="navbar-brand" href="../registro/index.html">
@@ -41,37 +40,37 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <div class="patient-profile-content">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2>Datos personales</h2>
-                    <ul>
-                        <li><strong>Edad:</strong> 34 años</li>
-                        <li><strong>Fecha de nacimiento:</strong> 1990-01-01</li>
-                        <li><strong>Teléfono:</strong> 555-1234</li>
-                        <li><strong>Email:</strong> johndoe@example.com</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h2>Historial dental</h2>
-                    <ul>
-                        <li><strong>Última visita:</strong> 2024-02-15</li>
-                        <li><strong>Motivo:</strong> Limpieza dental</li>
-                        <li><strong>Tratamientos pendientes:</strong> Relleno dental en molar izquierdo</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h2>Información dental</h2>
-                    <ul>
-                        <li><strong>Tipo de boca:</strong> Normal</li>
-                        <li><strong>Hábitos orales:</strong> Fuma ocasionalmente</li>
-                        <li><strong>Antecedentes dentales:</strong> Pérdida de pieza dental en incisivo central</li>
-                    </ul>
-                </div>
+
+        <div class="card-grid">
+          <div class="card1">
+            <h2>Datos personales</h2>
+            <div class="card-bodye">
+              <p><strong>Nombre:</strong> John Doe</p>
+              <p><strong>Edad:</strong> 34 años</p>
+              <p><strong>Fecha de nacimiento:</strong> 1990-01-01</p>
+              <p><strong>Teléfono:</strong> 555-1234</p>
+              <p><strong>Email:</strong> johndoe@example.com</p>
             </div>
+          </div>
+      
+          <div class="card1">
+            <h2>Historial dental</h2>
+            <div class="card-bodye">
+              <p><strong>Última visita:</strong> 2024-02-15</p>
+              <p><strong>Motivo:</strong> Limpieza dental</p>
+            </div>
+          </div>
+      
+          <div class="card1">
+            <h2>Información dental</h2>
+            <div class="card-bodye">
+              <p><strong>Tipo de boca:</strong> Normal</p>
+              <p><strong>Hábitos orales:</strong> Fuma ocasionalmente</p>
+              <p><strong>Tratamientos pendientes:</strong> Relleno dental en molar izquierdo</p>
+              <p><strong>Antecedentes dentales:</strong> Pérdida de pieza dental en incisivo central</p>
+            </div>
+          </div>
         </div>
-    </div>
     <footer>
         <div class="footer-container">
             <ul>
