--- a/citas/index.html
+++ b/citas/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="#">Agendar cita</a></li>
                     <div class="contenedor_icons">
                         <a class="navbar-brand" href="../registro_usr/index.html">
-                            <img src="../../img/usuario (1).png" alt="" width="30" height="24">
+                            <img src="../img/usuario (1).png" alt="" width="30" height="24">
                         </a>
                         <a class="navbar-brand" href="https://www.google.com.mx/maps/preview">
                             <img src="../img/marcador (2).png" alt="" width="30" height="24">
@@ -50,31 +50,31 @@
                     <img src="../img/caries-dental.png" alt="Icono de tratamiento">
                     <h2>Tratamientos de caries y restauraciones</h2>
                     <p>Nuestros dentistas expertos ofrecen tratamientos de caries y restauraciones para devolverle la salud a tus dientes.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <a href="../registro_usr/index.html"><button class="btn-ver-mas">Ver más</button></a>
                 </li>
                 <li>
                     <img src="../img/ortodoncia.png" alt="Icono de ortodoncia">
                     <h2>Ortodoncia y tratamientos de alineación</h2>
                     <p>Nuestros ortodoncistas expertos ofrecen tratamientos de ortodoncia y alineación para darle una sonrisa perfecta.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <a href="../registro_usr/index.html"><button class="btn-ver-mas">Ver más</button></a>
                 </li>
                 <li>
                     <img src="../img/cirugia-plastica.png" alt="Icono de cirugía">
                     <h2>Cirugía oral y maxilofacial</h2>
                     <p>Nuestros cirujanos expertos ofrecen cirugía oral y maxilofacial para resolver problemas complejos de salud oral.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <a href="../registro_usr/index.html"><button class="btn-ver-mas">Ver más</button></a>
                 </li>
                 <li>
                     <img src="../img/cepillo-de-dientes.png" alt="Icono de limpieza">
                     <h2>Limpieza y profilaxis</h2>
                     <p>Nuestros higienistas dentales ofrecen limpieza y profilaxis para mantener tus dientes y encías saludables.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <a href="../registro_usr/index.html"><button class="btn-ver-mas">Ver más</button></a>
                 </li>
                 <li>
                     <img src="../img/higiene.png" alt="Icono de blanqueamiento">
                     <h2>Blanqueamiento dental</h2>
                     <p>Nuestros dentistas expertos ofrecen blanqueamiento dental para dejar tus dientes con un brillo impresionante.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <a href="../registro_usr/index.html"><button class="btn-ver-mas">Ver más</button></a>
                 </li>
             </ul>
         </div>
