--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="./citas/index.html">Agendar cita</a></li>
                     <div class="contenedor_icons">
                         <a class="navbar-brand" href="./registro_usr/index.html">
-                            <img src="../../img/usuario (1).png" alt="" width="30" height="24">
+                            <img src="./img/usuario (1).png" alt="" width="30" height="24">
                         </a>
                         <a class="navbar-brand" href="https://www.google.com.mx/maps/preview">
                             <img src="./img/marcador (2).png" alt="" width="30" height="24">
