--- a/servicios/index.html
+++ b/servicios/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="../citas/index.html">Agendar cita</a></li>
                     <div class="contenedor_icons">
                         <a class="navbar-brand" href="../registro/index.html">
-                            <img src="../../img/usuario (1).png" alt="" width="30" height="24">
+                            <img src="../img/usuario (1).png" alt="" width="30" height="24">
                         </a>
                         <a class="navbar-brand" href="https://www.google.com.mx/maps/preview">
                             <img src="../img/marcador (2).png" alt="" width="30" height="24">
