--- a/vista_cliente/administrar_cita/agendar/index.html
+++ b/vista_cliente/administrar_cita/agendar/index.html
@@ -11,11 +11,11 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="../../../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./info/index.html">Informacion</a></li>
+                    <li><a href="../../info/index.html">Informacion</a></li>
                     <li><a href="./administrar_cita/index.html">Citas</a></li>
                     <li><a href="../../servicios/index.html">Servicios</a></li>
                     <div class="contenedor_icons">
