--- a/vista_cliente/administrar_cita/index.html
+++ b/vista_cliente/administrar_cita/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administración de Citas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -15,11 +15,11 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="../../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./info/index.html">Informacion</a></li>
+                    <li><a href="../info/index.html">Informacion</a></li>
                     <li><a href="#">Citas</a></li>
                     <li><a href="../servicios/index.html">Servicios</a></li>
                     <div class="contenedor_icons">
