--- a/vista_cliente/servicios/index.html
+++ b/vista_cliente/servicios/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="arriba">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" width="100" height="50" alt="">
+                    <img src="../../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="../administrar_cita/index.html">Citas</a></li>
                     <li><a href="../servicios/index.html">Servicios</a></li>
                     <div class="contenedor_icons">
-                        <a class="navbar-brand" href="../registro/index.html">
+                        <a class="navbar-brand" href="../../registro_usr/index.html">
                             <img src="../../img/usuario (1).png" alt="" width="30" height="24">
                         </a>
                         <a class="navbar-brand" href="https://www.google.com.mx/maps/preview">
