--- a/registro_usr/index.html
+++ b/registro_usr/index.html
@@ -66,17 +66,16 @@
                     <!-- Iniciar Sesion -->
                     <div id="iniciar-sesion">
                         <h1>Iniciar Sesión</h1>
-                        <form action="../vista_cliente/index.html">
+                        <form action="../connection/login.php" method="post">
                             <div class="contenedor-input">
-                                <label>
-                                    Usuario <span class="req">*</span>
+
+                                <label for="correo"> Correo <span class="req">*</span>
                                 </label>
                                 <input type="text" required>
                             </div>
 
                             <div class="contenedor-input">
-                                <label>
-                                    Contraseña <span class="req">*</span>
+                                <label for="contraseña"> Contraseña <span class="req">*</span>
                                 </label>
                                 <input type="password" required>
                             </div>
