--- a/registro_usr/registro.html
+++ b/registro_usr/registro.html
@@ -82,13 +82,13 @@
                             </div>
                             <div class="contenedor-input">
                                 <label>
-                                    Contraseña <span class="req">*</span>
+                                    Telefono <span class="req">*</span>
                                 </label>
                                 <input type="text" required>
                             </div>
                             <div class="contenedor-input">
                                 <label>
-                                    Nombre <span class="req">*</span>
+                                    Contraseña <span class="req">*</span>
                                 </label>
                                 <input type="text" required>
                             </div>
