--- a/registro_adm/index.html
+++ b/registro_adm/index.html
@@ -58,7 +58,7 @@
                 <!-- Links de los formularios -->
                 <ul class="contenedor-tabs">
                     <li class="tab tab-segunda active"><a href="#iniciar-sesion">Iniciar Sesión</a></li>
-                    <li class="tab tab-primera"><a href="./registro.html">Registrarse</a></li>
+                    <li class="tab tab-primera"><a href="#registrarse">Registrarse</a></li>
                 </ul>
 
                 <!-- Contenido de los Formularios -->
