--- a/registro_usr/index.html
+++ b/registro_usr/index.html
@@ -32,7 +32,7 @@
             <nav>
                 <div class="arriba">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/logo.png" width="100" height="50" alt="">
+                        <img src="../img/logo.png" width="100" height="50" alt="">
                     </a>
                     <div class="navbar_items">
                         <li><a href="../index.html">Home</a></li>
@@ -58,7 +58,7 @@
                 <!-- Links de los formularios -->
                 <ul class="contenedor-tabs">
                     <li class="tab tab-segunda active"><a href="#iniciar-sesion">Iniciar Sesión</a></li>
-                    <li class="tab tab-primera"><a href="./registro.html">Registrarse</a></li>
+                    <li class="tab tab-primera"><a href="#registrarse">Registrarse</a></li>
                 </ul>
 
                 <!-- Contenido de los Formularios -->
