--- a/vista_admin/calendario_admin/index.html
+++ b/vista_admin/calendario_admin/index.html
@@ -34,7 +34,7 @@
   <nav>
     <div class="arriba">
       <a class="navbar-brand" href="#">
-        <img src="/img/logo.png" width="100" height="50" alt="">
+        <img src="../../img/logo.png" width="100" height="50" alt="">
       </a>
       <div class="navbar_items">
         <li><a href="../index.html">Home</a></li>
@@ -104,6 +104,40 @@
     );
 
   </script>
+      <footer>
+        <div class="footer-container">
+            <ul>
+                <li><a href="#aviso-privacidad">Aviso de privacidad</a></li>
+                <li><a href="#terminos-y-condiciones">Términos y condiciones</a></li>
+                <li><a href="#mapa-de-sitio">Mapa de sitio</a></li>
+            </ul>
+            <p>&copy; 2023 Dentavida. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
+    <!-- Contenido de Aviso de privacidad -->
+    <div id="aviso-privacidad">
+        <h2>Aviso de privacidad</h2>
+        <p>Este sitio web utiliza cookies para mejorar su experiencia. Al continuar navegando, acepta nuestra política
+            de privacidad.</p>
+    </div>
+
+    <!-- Contenido de Términos y condiciones -->
+    <div id="terminos-y-condiciones">
+        <h2>Términos y condiciones</h2>
+        <p>Al utilizar este sitio web, acepta nuestros términos y condiciones.</p>
+    </div>
+
+    <!-- Contenido de Mapa de sitio -->
+    <div id="mapa-de-sitio">
+        <h2>Mapa de sitio</h2>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Acerca de</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </div>
 
 </body>
 
