--- a/registro_usr/index.html
+++ b/registro_usr/index.html
@@ -58,7 +58,7 @@
                 <!-- Links de los formularios -->
                 <ul class="contenedor-tabs">
                     <li class="tab tab-segunda active"><a href="#iniciar-sesion">Iniciar Sesión</a></li>
-                    <li class="tab tab-primera"><a href="./registro.html">Registrarse</a></li>
+                    <li class="tab tab-primera"><a href="#registrarse">Registrarse</a></li>
                 </ul>
 
                 <!-- Contenido de los Formularios -->
@@ -89,20 +89,26 @@
                     <div id="registrarse">
                         <h1>Registrarse</h1>
                         <form action="../vista_cliente/index.html">
+                            <div class="contenedor-input">
+                                <label class="Nombre">
+                                    Nombre <span class="req">*</span>
+                                </label>
+                                <input type="text" required>
+                            </div>
                             <div class="fila-arriba">
                                 <div class="contenedor-input">
-                                    <label>
-                                        Nombre <span class="req">*</span>
+                                    <label for="apellido_paterno">
+                                        Apellido Paterno <span class="req">*</span>
                                     </label>
                                     <input type="text" required>
                                 </div>
-
                                 <div class="contenedor-input">
                                     <label>
-                                        Apellido <span class="req">*</span>
+                                        Apellido Materno <span class="req">*</span>
                                     </label>
                                     <input type="text" required>
                                 </div>
+                                
                             </div>
                             <div class="contenedor-input">
                                 <label>
