--- a/registro_adm/registro.html
+++ b/registro_adm/registro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CodePen - Formulario Login / Registro de Usuarios - HTML5, CSS3 y JS (JQuery)</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href=".style.css">
 
 </head>
 
@@ -149,7 +149,7 @@
                                 <input type="password" required>
                             </div>
 
-                            <input type="submit" class="button button-block" value="Registrarse">
+                            <input type="submit" class="button" value="Registrarse">
 
                         </form>
                     </div>
