--- a/vista_cliente/index.html
+++ b/vista_cliente/index.html
@@ -59,7 +59,8 @@
                                                 alt="User-Profile-Image">
                                         </div>
                                         <div class="nombre">
-                                        <h1 class="fw-bold text-center p-4">Bienvenido <?= $nombre ?></h1>
+                                        <h6 class="f-w-600">Bienvenid@</h6>
+                                        <p>Juan</p>
                                             <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                         </div>
                                     </div>
