--- a/registro_adm/index.html
+++ b/registro_adm/index.html
@@ -32,7 +32,7 @@
             <nav>
                 <div class="arriba">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/logo.png" width="100" height="50" alt="">
+                        <img src="../img/logo.png" width="100" height="50" alt="">
                     </a>
                     <div class="navbar_items">
                         <li><a href="../index.html">Home</a></li>
