--- a/vista_admin/pacientes/index.html
+++ b/vista_admin/pacientes/index.html
@@ -23,7 +23,7 @@
                 </a>
                 <div class="navbar_items">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../calendario_admin/index.html">Agenda</a></li>
+                    <li><a href="../calendario_admin/index.html">Mis citas</a></li>
                     <li><a href="#">Pacientes</a></li>
                     <li><a href="../control_de_pagos/index.html">Control de pagos</a></li>
                     <div class="contenedor_icons">
