--- a/vista_cliente/info/index.html
+++ b/vista_cliente/info/index.html
@@ -14,9 +14,9 @@
                     <img src="../../img/logo.png" width="100" height="50" alt="">
                 </a>
                 <div class="navbar_items">
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../prueba.php">Home</a></li>
                     <li><a href="#">Informacion</a></li>
-                    <li><a href="../administrar_cita/index.html">Citas</a></li>
+                    <li><a href="../administrar_cita/agendar/index.php">Citas</a></li>
                     <li><a href="../servicios/index.html">Servicios</a></li>
                     <div class="contenedor_icons">
                         <a class="navbar-brand" href="../../registro_usr/index.html">
@@ -87,7 +87,7 @@
         <section class="call-to-action">
             <h2>¡Reserva tu cita hoy!</h2>
             <p>LLámanos al 555-555-5555 o haz clic en el botón de abajo para reservar tu cita.</p>
-            <a href="../administrar_cita/agendar/index.html"><button>Reservar cita</button></a>
+            <a href="../administrar_cita/agendar/agendar_cita.php"><button>Reservar cita</button></a>
         </section>
 
     </div>
