--- a/vista_cliente/servicios/index.html
+++ b/vista_cliente/servicios/index.html
@@ -36,7 +36,7 @@
         </nav>
 
     </header>
-<body>
+    
     <section class="catalogo">
         <div class="container">
             <h1>Catálogo de Servicios</h1>
@@ -45,33 +45,70 @@
                     <img src="../../img/caries-dental.png" alt="Icono de tratamiento">
                     <h2>Tratamientos de caries y restauraciones</h2>
                     <p>Nuestros dentistas expertos ofrecen tratamientos de caries y restauraciones para devolverle la salud a tus dientes.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <button class="btn-ver-mas" data-target="detalles1">Ver más</button>
+                    <div id="detalles1" class="detalles">
+                        <p>Los tratamientos de caries incluyen la eliminación de la caries y la restauración del diente afectado. Estos procedimientos ayudan a prevenir la progresión de la caries y a restaurar la funcionalidad y estética del diente. 
+                        <br><strong>Procedimiento:</strong> Consiste en eliminar el tejido dental cariado, limpiar el área afectada y rellenar la cavidad con un material adecuado.
+                        <br><strong>Materiales Utilizados:</strong> Amalgama, resina compuesta, porcelana o cerámica.
+                        <br><strong>Duración del tratamiento:</strong> 30-60 minutos.
+                        <br><strong class="precio">Costo:</strong> <span class="precio">$800 MXN</span></p>
+                    </div>
                 </li>
                 <li>
                     <img src="../../img/ortodoncia.png" alt="Icono de ortodoncia">
                     <h2>Ortodoncia y tratamientos de alineación</h2>
                     <p>Nuestros ortodoncistas expertos ofrecen tratamientos de ortodoncia y alineación para darle una sonrisa perfecta.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <button class="btn-ver-mas" data-target="detalles2">Ver más</button>
+                    <div id="detalles2" class="detalles">
+                        <p>La ortodoncia se enfoca en corregir dientes y mandíbulas desalineados. Utilizamos aparatos como brackets y alineadores transparentes para mover los dientes a sus posiciones correctas. 
+                        <br><strong>Procedimiento:</strong> Evaluación inicial, colocación de brackets o alineadores, ajustes periódicos y monitoreo constante.
+                        <br><strong>Duración del tratamiento:</strong> 18-24 meses.
+                        <br><strong>Materiales Utilizados:</strong> Brackets metálicos, brackets cerámicos, alineadores transparentes.
+                        <br><strong class="precio">Costo:</strong> <span class="precio">desde $20,000 MXN</span></p>
+                    </div>
                 </li>
                 <li>
                     <img src="../../img/cirugia-plastica.png" alt="Icono de cirugía">
                     <h2>Cirugía oral y maxilofacial</h2>
                     <p>Nuestros cirujanos expertos ofrecen cirugía oral y maxilofacial para resolver problemas complejos de salud oral.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <button class="btn-ver-mas" data-target="detalles3">Ver más</button>
+                    <div id="detalles3" class="detalles">
+                        <p>La cirugía oral y maxilofacial trata enfermedades, lesiones y defectos en la cabeza, cuello, cara, mandíbulas y tejidos duros y blandos de la región maxilofacial. Estos procedimientos pueden incluir la extracción de dientes impactados, cirugía de la mandíbula y tratamiento de tumores.
+                        <br><strong>Procedimiento:</strong> Evaluación clínica y radiológica, planificación quirúrgica, cirugía bajo anestesia y seguimiento postoperatorio.
+                        <br><strong>Duración del tratamiento:</strong> 1-3 horas.
+                        <br><strong>Materiales Utilizados:</strong> Instrumentos quirúrgicos especializados, suturas, anestesia.
+                        <br><strong class="precio">Costo:</strong> <span class="precio">desde $15,000 MXN</span></p>
+                    </div>
                 </li>
                 <li>
                     <img src="../../img/cepillo-de-dientes.png" alt="Icono de limpieza">
                     <h2>Limpieza y profilaxis</h2>
                     <p>Nuestros higienistas dentales ofrecen limpieza y profilaxis para mantener tus dientes y encías saludables.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <button class="btn-ver-mas" data-target="detalles4">Ver más</button>
+                    <div id="detalles4" class="detalles">
+                        <p>La limpieza dental profesional remueve la placa y el sarro acumulado en los dientes, previniendo enfermedades periodontales y caries. La profilaxis incluye la limpieza, pulido y revisión general de la salud bucal.
+                        <br><strong>Procedimiento:</strong> Remoción de placa y sarro, pulido dental y aplicación de flúor.
+                        <br><strong>Duración del tratamiento:</strong> 45-60 minutos.
+                        <br><strong>Materiales Utilizados:</strong> Herramientas de limpieza dental, pasta de pulido, flúor.
+                        <br><strong class="precio">Costo:</strong> <span class="precio">$600 MXN</span></p>
+                    </div>
                 </li>
                 <li>
                     <img src="../../img/higiene.png" alt="Icono de blanqueamiento">
                     <h2>Blanqueamiento dental</h2>
                     <p>Nuestros dentistas expertos ofrecen blanqueamiento dental para dejar tus dientes con un brillo impresionante.</p>
-                    <button class="btn-ver-mas">Ver más</button>
+                    <button class="btn-ver-mas" data-target="detalles5">Ver más</button>
+                    <div id="detalles5" class="detalles">
+                        <p>El blanqueamiento dental es un procedimiento cosmético que elimina manchas y decoloraciones en los dientes, mejorando su apariencia y logrando una sonrisa más blanca y brillante.
+                        <br><strong>Procedimiento:</strong> Aplicación de un gel blanqueador, activación del gel con luz LED, sesiones de mantenimiento.
+                        <br><strong>Duración del tratamiento:</strong> 60-90 minutos.
+                        <br><strong>Materiales Utilizados:</strong> Gel blanqueador, luz LED, protectores de encías.
+                        <br><strong class="precio">Costo:</strong> <span class="precio">$1,500 MXN</span></p>
+                    </div>
                 </li>
             </ul>
         </div>
     </section>
+
+    <script src="./script.js"></script>
 </body>
