--- a/servicios/index.html
+++ b/servicios/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Dental</title>
+    <link rel="preload" href="../style/components.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style/components.css">
 </head>
 
 <body>
@@ -38,73 +40,108 @@
     <section class="catalogo">
         <div class="container">
             <h1>Catálogo de Servicios</h1>
-            <ul class="servicios-list">
-                <li>
-                    <img src="../img/caries-dental.png" alt="Icono de tratamiento">
-                    <h2>Tratamientos de caries y restauraciones</h2>
-                    <p>Nuestros dentistas expertos ofrecen tratamientos de caries y restauraciones para devolverle la salud a tus dientes.</p>
-                    <button class="btn-ver-mas" data-target="detalles1">Ver más</button>
-                    <div id="detalles1" class="detalles">
-                        <p>Los tratamientos de caries incluyen la eliminación de la caries y la restauración del diente afectado. Estos procedimientos ayudan a prevenir la progresión de la caries y a restaurar la funcionalidad y estética del diente. 
-                        <br><strong>Procedimiento:</strong> Consiste en eliminar el tejido dental cariado, limpiar el área afectada y rellenar la cavidad con un material adecuado.
-                        <br><strong>Materiales Utilizados:</strong> Amalgama, resina compuesta, porcelana o cerámica.
-                        <br><strong>Duración del tratamiento:</strong> 30-60 minutos.
-                        <br><strong class="precio">Costo:</strong> <span class="precio">$800 MXN</span></p>
+            <div class="service-card-grid">
+                <article class="service-card">
+                    <div class="service-card__header">
+                        <span class="service-card__icon-wrapper">
+                            <img src="../img/icons/caries.svg" alt="Icono tratamiento de caries" class="service-card__icon">
+                        </span>
+                        <div>
+                            <span class="service-card__price-badge">$800 MXN</span>
+                            <h2 class="service-card__title">Tratamientos de caries</h2>
+                            <p class="service-card__summary">Restauraciones estéticas que detienen la caries y recuperan la funcionalidad de tus dientes.</p>
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <img src="../img/ortodoncia.png" alt="Icono de ortodoncia">
-                    <h2>Ortodoncia y tratamientos de alineación</h2>
-                    <p>Nuestros ortodoncistas expertos ofrecen tratamientos de ortodoncia y alineación para darle una sonrisa perfecta.</p>
-                    <button class="btn-ver-mas" data-target="detalles2">Ver más</button>
-                    <div id="detalles2" class="detalles">
-                        <p>La ortodoncia se enfoca en corregir dientes y mandíbulas desalineados. Utilizamos aparatos como brackets y alineadores transparentes para mover los dientes a sus posiciones correctas. 
-                        <br><strong>Procedimiento:</strong> Evaluación inicial, colocación de brackets o alineadores, ajustes periódicos y monitoreo constante.
-                        <br><strong>Duración del tratamiento:</strong> 18-24 meses.
-                        <br><strong>Materiales Utilizados:</strong> Brackets metálicos, brackets cerámicos, alineadores transparentes.
-                        <br><strong class="precio">Costo:</strong> <span class="precio">desde $20,000 MXN</span></p>
+                    <button class="service-card__toggle" type="button" aria-expanded="false" aria-controls="servicio-detalles-1">Ver más</button>
+                    <div id="servicio-detalles-1" class="service-card__details" aria-hidden="true">
+                        <ul class="service-card__details-list">
+                            <li><strong>Procedimiento:</strong> retiro de tejido cariado y sellado con resinas libres de BPA.</li>
+                            <li><strong>Materiales:</strong> amalgamas modernas, resinas compuestas o incrustaciones cerámicas.</li>
+                            <li><strong>Duración:</strong> 30 a 60 minutos según la profundidad de la lesión.</li>
+                        </ul>
                     </div>
-                </li>
-                <li>
-                    <img src="../img/cirugia-plastica.png" alt="Icono de cirugía">
-                    <h2>Cirugía oral y maxilofacial</h2>
-                    <p>Nuestros cirujanos expertos ofrecen cirugía oral y maxilofacial para resolver problemas complejos de salud oral.</p>
-                    <button class="btn-ver-mas" data-target="detalles3">Ver más</button>
-                    <div id="detalles3" class="detalles">
-                        <p>La cirugía oral y maxilofacial trata enfermedades, lesiones y defectos en la cabeza, cuello, cara, mandíbulas y tejidos duros y blandos de la región maxilofacial. Estos procedimientos pueden incluir la extracción de dientes impactados, cirugía de la mandíbula y tratamiento de tumores.
-                        <br><strong>Procedimiento:</strong> Evaluación clínica y radiológica, planificación quirúrgica, cirugía bajo anestesia y seguimiento postoperatorio.
-                        <br><strong>Duración del tratamiento:</strong> 1-3 horas.
-                        <br><strong>Materiales Utilizados:</strong> Instrumentos quirúrgicos especializados, suturas, anestesia.
-                        <br><strong class="precio">Costo:</strong> <span class="precio">desde $15,000 MXN</span></p>
+                </article>
+                <article class="service-card">
+                    <div class="service-card__header">
+                        <span class="service-card__icon-wrapper">
+                            <img src="../img/icons/ortodoncia.svg" alt="Icono de ortodoncia" class="service-card__icon">
+                        </span>
+                        <div>
+                            <span class="service-card__price-badge">Desde $20,000 MXN</span>
+                            <h2 class="service-card__title">Ortodoncia y alineadores</h2>
+                            <p class="service-card__summary">Corrección integral de la mordida con brackets estéticos o alineadores transparentes.</p>
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <img src="../img/cepillo-de-dientes.png" alt="Icono de limpieza">
-                    <h2>Limpieza y profilaxis</h2>
-                    <p>Nuestros higienistas dentales ofrecen limpieza y profilaxis para mantener tus dientes y encías saludables.</p>
-                    <button class="btn-ver-mas" data-target="detalles4">Ver más</button>
-                    <div id="detalles4" class="detalles">
-                        <p>La limpieza dental profesional remueve la placa y el sarro acumulado en los dientes, previniendo enfermedades periodontales y caries. La profilaxis incluye la limpieza, pulido y revisión general de la salud bucal.
-                        <br><strong>Procedimiento:</strong> Remoción de placa y sarro, pulido dental y aplicación de flúor.
-                        <br><strong>Duración del tratamiento:</strong> 45-60 minutos.
-                        <br><strong>Materiales Utilizados:</strong> Herramientas de limpieza dental, pasta de pulido, flúor.
-                        <br><strong class="precio">Costo:</strong> <span class="precio">$600 MXN</span></p>
+                    <button class="service-card__toggle" type="button" aria-expanded="false" aria-controls="servicio-detalles-2">Ver más</button>
+                    <div id="servicio-detalles-2" class="service-card__details" aria-hidden="true">
+                        <ul class="service-card__details-list">
+                            <li><strong>Planificación:</strong> escaneo digital y simulación del movimiento dental.</li>
+                            <li><strong>Seguimiento:</strong> citas de ajuste cada 6-8 semanas.</li>
+                            <li><strong>Tiempo estimado:</strong> 18 a 24 meses dependiendo del caso.</li>
+                        </ul>
                     </div>
-                </li>
-                <li>
-                    <img src="../img/higiene.png" alt="Icono de blanqueamiento">
-                    <h2>Blanqueamiento dental</h2>
-                    <p>Nuestros dentistas expertos ofrecen blanqueamiento dental para dejar tus dientes con un brillo impresionante.</p>
-                    <button class="btn-ver-mas" data-target="detalles5">Ver más</button>
-                    <div id="detalles5" class="detalles">
-                        <p>El blanqueamiento dental es un procedimiento cosmético que elimina manchas y decoloraciones en los dientes, mejorando su apariencia y logrando una sonrisa más blanca y brillante.
-                        <br><strong>Procedimiento:</strong> Aplicación de un gel blanqueador, activación del gel con luz LED, sesiones de mantenimiento.
-                        <br><strong>Duración del tratamiento:</strong> 60-90 minutos.
-                        <br><strong>Materiales Utilizados:</strong> Gel blanqueador, luz LED, protectores de encías.
-                        <br><strong class="precio">Costo:</strong> <span class="precio">$1,500 MXN</span></p>
+                </article>
+                <article class="service-card">
+                    <div class="service-card__header">
+                        <span class="service-card__icon-wrapper">
+                            <img src="../img/icons/cirugia.svg" alt="Icono de cirugía oral" class="service-card__icon">
+                        </span>
+                        <div>
+                            <span class="service-card__price-badge">Desde $15,000 MXN</span>
+                            <h2 class="service-card__title">Cirugía oral y maxilofacial</h2>
+                            <p class="service-card__summary">Soluciones quirúrgicas avanzadas para extracciones complejas y rehabilitaciones completas.</p>
+                        </div>
                     </div>
-                </li>
-            </ul>
+                    <button class="service-card__toggle" type="button" aria-expanded="false" aria-controls="servicio-detalles-3">Ver más</button>
+                    <div id="servicio-detalles-3" class="service-card__details" aria-hidden="true">
+                        <ul class="service-card__details-list">
+                            <li><strong>Etapas:</strong> valoración clínica y radiológica, planeación 3D y cirugía guiada.</li>
+                            <li><strong>Equipo:</strong> anestesia segura, suturas reabsorbibles y guías impresas.</li>
+                            <li><strong>Postoperatorio:</strong> controles y medicación incluidos en el plan.</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="service-card">
+                    <div class="service-card__header">
+                        <span class="service-card__icon-wrapper">
+                            <img src="../img/icons/profilaxis.svg" alt="Icono de profilaxis" class="service-card__icon">
+                        </span>
+                        <div>
+                            <span class="service-card__price-badge">$600 MXN</span>
+                            <h2 class="service-card__title">Limpieza y profilaxis</h2>
+                            <p class="service-card__summary">Sesiones preventivas para mantener encías sanas y prevenir enfermedad periodontal.</p>
+                        </div>
+                    </div>
+                    <button class="service-card__toggle" type="button" aria-expanded="false" aria-controls="servicio-detalles-4">Ver más</button>
+                    <div id="servicio-detalles-4" class="service-card__details" aria-hidden="true">
+                        <ul class="service-card__details-list">
+                            <li><strong>Incluye:</strong> detartraje ultrasónico, pulido con pastas remineralizantes y flúor.</li>
+                            <li><strong>Duración:</strong> 45 a 60 minutos.</li>
+                            <li><strong>Beneficio:</strong> refuerzo de higiene personalizado para casa.</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="service-card">
+                    <div class="service-card__header">
+                        <span class="service-card__icon-wrapper">
+                            <img src="../img/icons/blanqueamiento.svg" alt="Icono de blanqueamiento" class="service-card__icon">
+                        </span>
+                        <div>
+                            <span class="service-card__price-badge">$1,500 MXN</span>
+                            <h2 class="service-card__title">Blanqueamiento dental</h2>
+                            <p class="service-card__summary">Aclara varios tonos en una sola sesión con luz LED y protección gingival.</p>
+                        </div>
+                    </div>
+                    <button class="service-card__toggle" type="button" aria-expanded="false" aria-controls="servicio-detalles-5">Ver más</button>
+                    <div id="servicio-detalles-5" class="service-card__details" aria-hidden="true">
+                        <ul class="service-card__details-list">
+                            <li><strong>Protocolo:</strong> aislamiento suave, aplicación de gel y activación lumínica.</li>
+                            <li><strong>Mantenimiento:</strong> kit domiciliario para prolongar resultados.</li>
+                            <li><strong>Tiempo:</strong> 60 a 90 minutos según sensibilidad.</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
 
